feat: chat, member 연동