@@ -3,6 +3,7 @@ package com.zerobase.oriticket.chat.service;
 import com.zerobase.oriticket.domain.chat.entity.ChatRoom;
 import com.zerobase.oriticket.domain.chat.repository.ChatRoomRepository;
 import com.zerobase.oriticket.domain.chat.service.ChatRoomService;
+import com.zerobase.oriticket.domain.members.entity.Member;
 import com.zerobase.oriticket.domain.transaction.entity.Transaction;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -32,6 +33,21 @@ public class ChatRoomServiceTest {
     @InjectMocks
     private ChatRoomService chatRoomService;
 
+    private ChatRoom createChatRoom(Long chatRoomId, Transaction transaction, Set<Member> members){
+        return ChatRoom.builder()
+                .chatRoomId(chatRoomId)
+                .transaction(transaction)
+                .members(members)
+                .createdAt(LocalDateTime.now())
+                .build();
+    }
+
+    private Member createMember(Long membersId){
+        return Member.builder()
+                .membersId(membersId)
+                .build();
+    }
+
     private Transaction createTransaction(Long transactionId){
         return Transaction.builder()
                 .transactionId(transactionId)
@@ -43,16 +59,13 @@ public class ChatRoomServiceTest {
     void successGet(){
         //given
         Transaction transaction = createTransaction(10L);
-
-        Set<Long> members = new HashSet<>(Arrays.asList(1L, 2L));
+        Member member1 = createMember(1L);
+        Member member2 = createMember(2L);
+        Set<Member> members = Set.of(member1, member2);
+        ChatRoom chatRoom = createChatRoom(5L, transaction, members);
 
         given(chatRoomRepository.findById(anyLong()))
-                .willReturn(Optional.of(ChatRoom.builder()
-                        .chatRoomId(5L)
-                        .transaction(transaction)
-                        .members(members)
-                        .createdAt(LocalDateTime.now())
-                        .build()));
+                .willReturn(Optional.of(chatRoom));
 
         //when
         ChatRoom fetchedChatRoom = chatRoomService.get(5L);
@@ -69,23 +82,13 @@ public class ChatRoomServiceTest {
     @DisplayName("모든 채팅 방 조회 성공")
     void successGetAll(){
         //given
-        Set<Long> members = new HashSet<>(Arrays.asList(1L, 2L));
         Transaction transaction1 = createTransaction(10L);
         Transaction transaction2 = createTransaction(11L);
-
-        ChatRoom chatRoom1 = ChatRoom.builder()
-                .chatRoomId(5L)
-                .transaction(transaction1)
-                .members(members)
-                .createdAt(LocalDateTime.now())
-                .build();
-
-        ChatRoom chatRoom2 = ChatRoom.builder()
-                .chatRoomId(6L)
-                .transaction(transaction2)
-                .members(members)
-                .createdAt(LocalDateTime.now())
-                .build();
+        Member member1 = createMember(1L);
+        Member member2 = createMember(2L);
+        Set<Member> members = Set.of(member1, member2);
+        ChatRoom chatRoom1 = createChatRoom(5L, transaction1, members);
+        ChatRoom chatRoom2 = createChatRoom(6L, transaction2, members);
 
         List<ChatRoom> chatRoomList = Arrays.asList(chatRoom1, chatRoom2);
 
@@ -112,16 +115,14 @@ public class ChatRoomServiceTest {
     @DisplayName("Transaction 으로 채팅 방 조회 성공")
     void successGetByTransaction(){
         //given
-        Set<Long> members = new HashSet<>(Arrays.asList(1L, 2L));
         Transaction transaction = createTransaction(10L);
+        Member member1 = createMember(1L);
+        Member member2 = createMember(2L);
+        Set<Member> members = Set.of(member1, member2);
+        ChatRoom chatRoom = createChatRoom(5L, transaction, members);
 
         given(chatRoomRepository.findByTransaction_TransactionId(anyLong()))
-                .willReturn(Optional.of(ChatRoom.builder()
-                        .chatRoomId(5L)
-                        .transaction(transaction)
-                        .members(members)
-                        .createdAt(LocalDateTime.now())
-                        .build()));
+                .willReturn(Optional.of(chatRoom));
 
         //when
         ChatRoom fetchedChatRoom = chatRoomService.getByTransaction(10L);
@@ -138,27 +139,17 @@ public class ChatRoomServiceTest {
     @DisplayName("Member 로 채팅 방 조회 성공")
     void successGetByMember(){
         //given
-        Set<Long> members = new HashSet<>(Arrays.asList(1L, 2L));
         Transaction transaction1 = createTransaction(10L);
         Transaction transaction2 = createTransaction(11L);
-
-        ChatRoom chatRoom1 = ChatRoom.builder()
-                .chatRoomId(5L)
-                .transaction(transaction1)
-                .members(members)
-                .createdAt(LocalDateTime.now())
-                .build();
-
-        ChatRoom chatRoom2 = ChatRoom.builder()
-                .chatRoomId(10L)
-                .transaction(transaction2)
-                .members(members)
-                .createdAt(LocalDateTime.now())
-                .build();
+        Member member1 = createMember(1L);
+        Member member2 = createMember(2L);
+        Set<Member> members = Set.of(member1, member2);
+        ChatRoom chatRoom1 = createChatRoom(5L, transaction1, members);
+        ChatRoom chatRoom2 = createChatRoom(10L, transaction2, members);
 
         List<ChatRoom> chatRoomList = Arrays.asList(chatRoom1, chatRoom2);
 
-        given(chatRoomRepository.findAllByMembers(anyLong()))
+        given(chatRoomRepository.findAllByMembers_MembersId(anyLong()))
                 .willReturn(chatRoomList);
 
         //when
